--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,8 @@ jobs:
       - name: Move files to publish directory
         run: |
           mkdir -p publish
+          # wget -nv -O- "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-ASN&license_key=${{ secrets.LICENSE_KEY }}&suffix=tar.gz" | tar zxv
+          # cp -v GeoLite*/*.mmdb publish
           mv ./output/dat/*.dat ./publish/
           # cp ./data/cn ./publish/cn.txt
           # cp ./ip.txt ./publish/ip.txt
